# csa-lab-3

./: .gitignore  README.md  lcc.py  mem.dump  output.yaml  pyproject.toml  report.md  test.lsp
.github/workflows/: py-app.yml
algo/: cat.lsp  hello_user_name.lsp  helloworld.lsp  prob5.lsp
compiler/: __main__.py  compiler.py  isagenerator.py  parser.py  preprocessor.py
emu/: ControlUnit.py  DataPath.py  MicroCode.py  __main__.py  alu.py  bl.py  control_unit.py  dataPath.py  data_path.py  hw.py  instruction.py  soc.py  сontrolUnit.py
lib/: math.lsp  str.lsp
tests/: golden_test.py  test_golden.py
tests/golden/: cat.yaml  cat_test.dump  hello_user_name.dump  hello_user_name.yaml  hello_user_name_test.dump  helloworld.dump  helloworld.yaml  helloworld_test.dump  prob5.yaml
