[tool.poetry]
name = "csa3"
version = "0.1.0"
description = ""
authors = ["gamatacy <voroninivan003@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
isort = "^5.12.0"
black = "^23.11.0"
pytest-golden = "^0.2.2"
ruff = "^0.2.1"

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "C0114",  # missing-module-docstring
  "C0116",  # missing-function-docstring
  "C0115",  # missing-class-docstring
]

[tool.black]
line-length = 100
target-version = ['py310']
preview = true

[tool.isort]
known_local_folder = 'comp3'
lines_after_imports = 2
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"